Fix chat list overflow

--- a/src/Pages/Main/ChatSidebar/ChatSidebar.scss
+++ b/src/Pages/Main/ChatSidebar/ChatSidebar.scss
@@ -6,12 +6,10 @@
 	gap: 30px;
 	box-sizing: border-box;
 	background-color: variable.$secondary-color;
-	padding: 10px 00px;
 	min-width: 300px;
 	max-width: 25%; // width of chat side-bar
 	height: 750px;
 	overflow-x: hidden;
-	overflow-y: scroll;
 	direction: rtl;
 
 	// create/join chat buttons
@@ -65,9 +63,12 @@
 .chat-list-container {
 	.chat-list {
 		margin: 0;
+		margin-top: auto;
 		border-radius: 20px;
 		background-color: variable.$primary-color;
 		padding: 10px;
+		height: (750px - 80px - 30px); // height of current chat - add chat - gap
+		overflow-y: scroll;
 		list-style: none;
 		direction: ltr;
 
@@ -104,5 +105,14 @@
 				white-space: nowrap;
 			}
 		}
+	}
+
+	// scrollbar for chat
+	.chat-list::-webkit-scrollbar {
+		width: 2px;
+	}
+	.chat-list::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		background: rgb(255, 255, 255);
 	}
 }
